--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -130,4 +130,5 @@
     <string name="visit_exp_list_empty">Visit has no encounters yet.</string>
     <!-- Capture Vitals activity -->
     <string name="action_capture_vitals">Capture Vitals</string>
+    <string name="failed_to_open_vitals_form">An error occurred. Invalid or corrupted form file.</string>
 </resources>
